fixed sidebar spacing in comp-vis

--- a/src/components/Huffman/index.scss
+++ b/src/components/Huffman/index.scss
@@ -1,15 +1,10 @@
-.huff-container {
-  width: 100%;
-  height: 100%;
-  min-height: 566px;
-  position: absolute;
-  top: 0%;
-  margin: 0 auto;
-  z-index: 1;
-}
 .huff-page {
   width: 100%;
   height: 100%;
-  position: absolute;
-  left: 60px;
+}
+.huff-container {
+  min-height: 566px;
+  top: 0%;
+  margin: 0 auto;
+  z-index: 1;
 }
