--- a/src/compression-visualizer/App.css
+++ b/src/compression-visualizer/App.css
@@ -3,10 +3,10 @@
 @import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
 
 .AppC {
-  /* text-align: center; */
-  width: 100vw;
+  /* 60px's needed for sidebar spacing */
+  width: 100vw - 60px;
+  margin-left: 60px;
   height: 100vh;
-  margin: 0px;
   display: flex;
   flex-direction: column;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
